submenu opens if exist in mobile view, logos added, sticky positioning, content overflow issue fixed

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -26,6 +26,10 @@
 }
 .sidemenu-wrapper {
   width: var(--initial-width);
+  flex-shrink: 0;
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
 }
 .main-content {
   border: 1px solid blue;
